hphp/hack/test/sound_dynamic/typing/push_dynamic_arg.bad.php.exp
File "push_dynamic_arg.bad.php", line 8, characters 10-11:
Invalid return type (Typing[4110])
  File "push_dynamic_arg.bad.php", line 7, characters 20-26:
  Expected `dynamic`
  File "push_dynamic_arg.bad.php", line 7, characters 38-40:
  But got `int`
  File "push_dynamic_arg.bad.php", line 7, characters 38-40:
  This type argument to `Inv` must match exactly (it is invariant)
